Edited name of easter egg function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div id="background"></div>
 
-<a onclick="TurnDown();" href="#" class="green-pixel">
+<a onclick="TurnDownForWhat();" href="#" class="green-pixel">
 	test
 </a>
 
@@ -331,7 +331,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script type="application/javascript">
-	function TurnDown() {
+	function TurnDownForWhat() {
 		document.getElementById("audio").play();
 	}
 </script>
