Added images and testimonials
Feed has no padding

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<li><a href="#after">Apres Studie</a></li>
 		<li><a href="#testimonials">Testimonials</a></li>
 		<li><a href="#feed">#fontysmedia</a></li>
-		<li><a href="#info">Informatie</a> </li>
+		<li><a href="#info">Informatie</a></li>
 	</ul>
 </nav>
 
@@ -213,65 +213,34 @@
 		<div class="col-12 text-center">
 			<h2>Zie wat onze studenten en leraren van de opleiding vinden</h2>
 		</div>
-		<div class="col-3">
+		<div class="col-3 offset-2">
 			<div class="thumb-container">
 				<img class="img-responsive img-rounded"
-					 src="img/assets/person-placeholder-male.jpg" alt="een plaatje van een man">
+					 src="img/assets/image-david.jpg" alt="een plaatje van een man">
 			</div>
 			<div class="text-center">
-				<h3>Thijs van Gerwen</h3>
-				<h5>Leraar ICT&amp;M</h5>
+				<h3>David Diks</h3>
+				<h5>Student IMD</h5>
 
-				<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					als
-					een ontwerper</p>
+				<p>In plaats van het herhalen wat de leraar zegt, krijgen we bij Media en Design de artistieke vrijheid
+					om onze eigen keuzes te maken. Het komt nauwelijks voor dat wij moeten werken volgens bepaalde
+					regels.</p>
 			</div>
 
 		</div>
-		<div class="col-3">
+		<div class="col-3 offset-2">
 			<div class="thumb-container">
 				<img class="img-responsive img-rounded"
-					 src="img/assets/person-placeholder-male.jpg" alt="plaatje van een man">
+					 src="img/assets/image-wouter.jpg" alt="plaatje van een man">
 			</div>
 			<div class="text-center">
-				<h3>Thijs van Gerwen</h3>
-				<h5>Leraar ICT&amp;M</h5>
+				<h3>Wouter Vanmolken</h3>
+				<h5>Student IMD</h5>
 
-				<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					als
-					een ontwerper</p>
+				<p>Het is een zeer interessante opleiding, waarbij de nadruk niet gelgd wordt op de lestof, maar meer op
+					de groei van de student zelf. Wij werken hier niet aan projecten, maar eerder aan onszelf.</p>
 			</div>
 
-		</div>
-		<div class="col-3">
-			<div class="thumb-container">
-				<img class="img-responsive img-rounded"
-					 src="img/assets/person-placeholder-male.jpg" alt="nog een plaatje van een man">
-			</div>
-			<div class="text-center">
-				<h3>Thijs van Gerwen</h3>
-				<h5>Leraar ICT&amp;M</h5>
-
-				<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					als
-					een ontwerper</p>
-			</div>
-
-		</div>
-		<div class="col-3">
-
-			<div class="thumb-container">
-				<img class="img-responsive img-rounded"
-					 src="img/assets/person-placeholder-male.jpg" alt="laatste plaatje">
-			</div>
-			<div class="text-center">
-				<h3>Thijs van Gerwen</h3>
-				<h5>Leraar ICT&amp;M</h5>
-
-				<p>Wij leren studenten hier niet hoe zij een website moeten maken, wij leren studenten hoe te denken
-					als
-					een ontwerper</p>
-			</div>
 		</div>
 	</div>
 </div>
@@ -310,9 +279,10 @@
 
 		<div class="col-4 col-offset-2">
 			<ul>
-				<li><a href="http://fontys.nl">Fontys</a> </li>
-				<li><a href="http://fontys.nl/Studeren/Opleidingen/HBOICT-met-11-studieroutes-voltijd.htm">ICT op Fontys</a></li>
-				<li><a href="http://fontys.nl/hbo-ict-media-design/">Media Design op Fontys</a> </li>
+				<li><a href="http://fontys.nl">Fontys</a></li>
+				<li><a href="http://fontys.nl/Studeren/Opleidingen/HBOICT-met-11-studieroutes-voltijd.htm">ICT op
+					Fontys</a></li>
+				<li><a href="http://fontys.nl/hbo-ict-media-design/">Media Design op Fontys</a></li>
 			</ul>
 		</div>
 	</div>
